tests/compile/command_modules/dep_missing_format.expected
#ifdef __clang__
In file included from dep_missing_format.cpp:5:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: lights
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
dep_missing_format.cpp:32:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRasterization>, rcgp::DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>, rcgp::Dependency<lights>, rcgp::TerminalSentinel<rcgp::PipelineKind::eRasterization>>' requested here
   32 |                 | draw(3);
      |                 ^
1 error generated.
#elif defined(__GNUC__)
#if __GNUC__ == 16
In file included from include/rcgp-meta.hpp:9,
                 from include/rcgp.hpp:4,
                 from tests/compile/command_modules/dep_missing_format.cpp:5:
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eRasterization>, DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>, Dependency<lights>}; B = {TerminalSentinel<rcgp::PipelineKind::eRasterization>}]':
tests/compile/command_modules/dep_missing_format.cpp:32:11:   required from here
   32 |                 | draw(3);
      |                         ^
include/meta/commands.hpp:89:31: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: lights
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
  • 'false' evaluates to false
#elif __GNUC__ == 15
In file included from include/rcgp-meta.hpp:9,
                 from include/rcgp.hpp:4,
                 from tests/compile/command_modules/dep_missing_format.cpp:5:
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eRasterization>, DependencyIndicatorForIndexBuffer<rcgp::Topology::eTriangleList>, Dependency<lights>}; B = {TerminalSentinel<rcgp::PipelineKind::eRasterization>}]':
tests/compile/command_modules/dep_missing_format.cpp:32:11:   required from here
   32 |                 | draw(3);
      |                         ^
include/meta/commands.hpp:89:31: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: lights
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
include/meta/commands.hpp:89:31: note: 'false' evaluates to false
#endif
#endif
